tests/baselines/reference/scannerES3NumericLiteral3.errors.txt
scannerES3NumericLiteral3.ts(1,1): error TS1121: Octal literals are not allowed. Use the syntax '0o1'.
scannerES3NumericLiteral3.ts(1,3): error TS1005: ';' expected.


==== scannerES3NumericLiteral3.ts (2 errors) ====
    01.0
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o1'.
      ~~
!!! error TS1005: ';' expected.